Use gzip, tingodb to store session, calculate stats

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
     div.fs-title
       h1 Setup
     section
-      form.simform#myform(autocomplete='off', action='score', method='get')
+      form.simform#myform(autocomplete='off', action='score', method='post')
         div.simform-inner
           ol.questions
             li
