--- a/views/score.jade
+++ b/views/score.jade
@@ -5,18 +5,12 @@ block content
         div.fs-title
             h1 Scoring
         section
-            form.simform#myform(autocomplete='off', action='score', method='get')
+            form.simform#myform(autocomplete='off', action='score', method='post')
                 div.simform-inner
                     ol.questions
                         li
-                            span: label(for='name') What's your name?
-                            input#name(name='name', type='text', placeholder='Jacob', required='true', value=name)
-                        li
-                            span: label(for='shots') Number of shots in a round?
-                            input#shots(name='shots', type='number', placeholder='6', required='true', value=shots)
-                        li
                             span: label(for='score') Score?
-                            input#score(name='score', type='number', placeholder='6', required='true')
+                            input#score(name='score', type='number', placeholder='45', required='true')
 
                     button.submit(type='submit') Send answers
                     div.controls
@@ -50,8 +44,8 @@ block content
                         req.addEventListener('abort', showError);
 
                         var url = '#{url}';
-                        var name = document.getElementById('name').value;
-                        var shots = document.getElementById('shots').value;
+                        var shots = '#{shots}';
+                        var name = '#{name}';
                         var score = document.getElementById('score').value;
                         req.open('GET', url + `?Score=${score}&Shots=${shots}&Name=${name}`, true);
                         req.send();
