Add best/worst round stats

--- a/views/stats.jade
+++ b/views/stats.jade
@@ -13,6 +13,14 @@ block content
             h3= avgScore
     div.stat
         div
+            h2 Best Round
+            h3= bestRound
+    div.stat
+        div
+            h2 Worst Round
+            h3= worstRound
+    div.stat
+        div
             h2 Avg Time
             h3= avgRoundTime
     div.stat
